--- a/styles.css
+++ b/styles.css
@@ -15,24 +15,24 @@ body {
   position: relative;
   width: 1920px;
   height: 1080px;
-	background-color: white;
-  text-align: center;
+	background-color: black;
+  /* text-align: center; */
 }
 
 #banner {
   position: absolute;
-  width: 1800px;
-  height: 175px;
-  top: 800px;
-  left: 60px;
+  width: 180px;
+  /* height: 80px; */
+  top: 0px;
+  left: 1740px;
   color: white;
-  padding-top: 45px;
-  font: 80pt Montserrat;
+  padding: 20px;
+  font: 24pt Montserrat;
   font-weight: 500;
   background-color: black;
-  background-image: url("images/gradient.jpg");
-  filter: drop-shadow(0px 10px 15px black);
-  border-radius: 20px;
+  /* background-image: url("images/gradient.jpg"); */
+  /* filter: drop-shadow(0px 10px 15px black); */
+  /* border-radius: 20px; */
   z-index: 2;
   opacity: 0.9;
 }
